# ChangeLog for app-text/pinfo
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-text/pinfo/ChangeLog,v 1.79 2014/12/01 12:24:32 jer Exp $

*pinfo-0.6.10-r5 (01 Dec 2014)

  01 Dec 2014; Jeroen Roovers <jer@gentoo.org> +pinfo-0.6.10-r5.ebuild:
  Try eautoreconf instead of autogen.sh.

  08 Jun 2014; Jeroen Roovers <jer@gentoo.org> pinfo-0.6.10-r4.ebuild,
  +files/pinfo-0.6.10-gettext-0.19.patch:
  Add gettext-0.19 compatibility patch by zimous (bug #512764).

  13 Apr 2013; Jeroen Roovers <jer@gentoo.org> -pinfo-0.6.10-r3.ebuild:
  Old.

  13 Apr 2013; Agostino Sarubbo <ago@gentoo.org> pinfo-0.6.10-r4.ebuild:
  Stable for sparc, wrt bug #464414

  12 Apr 2013; Agostino Sarubbo <ago@gentoo.org> pinfo-0.6.10-r4.ebuild:
  Stable for ia64, wrt bug #464414

  12 Apr 2013; Agostino Sarubbo <ago@gentoo.org> pinfo-0.6.10-r4.ebuild:
  Stable for alpha, wrt bug #464414

  10 Apr 2013; Jeroen Roovers <jer@gentoo.org> pinfo-0.6.10-r4.ebuild:
  Stable for HPPA (bug #464414).

  05 Apr 2013; Agostino Sarubbo <ago@gentoo.org> pinfo-0.6.10-r4.ebuild:
  Stable for x86, wrt bug #464414

  05 Apr 2013; Agostino Sarubbo <ago@gentoo.org> pinfo-0.6.10-r4.ebuild:
  Stable for ppc64, wrt bug #464414

  05 Apr 2013; Agostino Sarubbo <ago@gentoo.org> pinfo-0.6.10-r4.ebuild:
  Stable for ppc, wrt bug #464414

  05 Apr 2013; Jeroen Roovers <jer@gentoo.org> pinfo-0.6.10-r4.ebuild:
  Add readline dep.

  05 Apr 2013; Chema Alonso <nimiux@gentoo.org> pinfo-0.6.10-r4.ebuild:
  Stable for amd64 wrt bug #464414

*pinfo-0.6.10-r4 (27 Feb 2013)

  27 Feb 2013; Jeroen Roovers <jer@gentoo.org> pinfo-0.6.10-r3.ebuild,
  +pinfo-0.6.10-r4.ebuild, +files/pinfo-0.6.10-tinfo.patch:
  Fix building against sys-libs/ncurses[-tinfo] (bug #459528).

  18 Jun 2012; Jeroen Roovers <jer@gentoo.org> -pinfo-0.6.10-r2.ebuild:
  Old.

  17 Jun 2012; Raúl Porcel <armin76@gentoo.org> pinfo-0.6.10-r3.ebuild:
  alpha/ia64/sparc stable wrt #415291
