@@ -11,13 +11,13 @@ AUX pinfo-0.6.9-as-needed.patch 457 SHA256 b3e6fa18a7e3a9a1938c44ebd43184983b32a
 AUX pinfo-0.6.9-lzma-xz.patch 614 SHA256 5c8923ee6dce84a114ad27aefaa2a3ced2a98b971958c56eefdabe26ed0fb804 SHA512 8e3ec8a98347c061826cc913c09fd2177d0f8625947c319b527e85d5ae3dcbf7dafb34b5f4a5e2fc9639bcc4db45afdea7dda6db6a88001e1c6a3994b4847ae4 WHIRLPOOL 62500cf2d5736a3c92ba321c012165df2f37577d3557a088ce414e8c1a613c30fe4640d6ec82f60d9d4c80631a4ef9e50c5803efbb2794e75f41bea98856a254
 DIST pinfo-0.6.10.tar.bz2 133059 SHA256 122180a0c23d11bc9eb569a4de3ff97d3052af96e32466fa62f2daf46ff61c5d SHA512 d3aeb93a668b939a2be7dd397ef5c918a8d108a1a7613ce39d4ef2faafbd549582a35d95c74c1dc74f4c86c9f2bf09b7bca7b5006c5a79302403dd906e8d376e WHIRLPOOL 92878e887f52729a266e99b25ea671f54f0cb5f11680c018bfb92a70de4ff2927ee59cf01e4fddbfe9c78c7c61b8c0dfd6edfcc761a0e6ddb6e751e0e6220047
 EBUILD pinfo-0.6.10-r4.ebuild 1348 SHA256 a1b1b455e5260a5bb464eed76a2b044ab4a31f456cddba44d910e7e7f402017c SHA512 9ab77cc440f0f8d2c9c30e4ef75a11fe46a77a5188d9008dc6aa248baacb119a1e61f861000bd33de4db347f6d41f2c30d2ce59da84d73d251617534ab344b25 WHIRLPOOL 10ff463cdad8738c3d127a0cc0373867b94395bc12156f7f6d6b71ce0dfeeb949b516cd5da80c9199c1034026130227bf42429f569208b696e5c0d0d9a63f9e5
-EBUILD pinfo-0.6.10-r5.ebuild 1319 SHA256 5b4c119f405d578425526774718e3dcb85b28639249d95492fc26044c9925f63 SHA512 67fd5ad7142fd87edebaa74e152958173b14bb5bcbeea8380df0c3bf64c9247b137405843b4395702a981fc25bd912db403c95a0d2f5390c79d21b34fe38d3c6 WHIRLPOOL 56ddb35a97ac514afeeadde163e0893e587b4f7ae92acfddcc9a83222d0c0ed17981326c39b246d45399789f69f4a44a10a87dd9583233221c065c529a541264
-MISC ChangeLog 10374 SHA256 06ced4b60ceb75fd379d57615d4f6adb005c883c5fb041ece59ca32c7bd0729e SHA512 f17b7e8305a44c0fff6ec69a643e032c7bf74d528d88b4926c4842975e24c82d5c8c9e879b41e87830144213fdb98f5d6281d2d9075e1b2977b7d17c1030debf WHIRLPOOL 0a078d6db52cb8e9cf8f1cb8ce2612f948de37414bac31905e5a1c8c8504797c0178c4c7d58cb180e9a4095937a960f05dc98de9c62b593aad546778c27196ea
+EBUILD pinfo-0.6.10-r5.ebuild 1318 SHA256 0a4a754abb1f1d130263ec3273e02774e37ab3ef37469c0b8b41fc05ee558610 SHA512 2621d0439be50afa34f5d945c40bffd0e69189b11b39bd37a5561d986ceab2fa2a4001dec4003f6a64f5e1ed46497f9b7c055f76382c858594625c47d3eab21f WHIRLPOOL ee02f3a917195b137ef569a293a4f7f443ec72f746a2a6e23064c4006cdce5a8772f5846d11687a71d64474dde54a6db52494939c5cff80e0c35d7b1ad6caac7
+MISC ChangeLog 10479 SHA256 346cc2f148fabe2daaa7c40c96e8fb8ee577632f826d14aad1474299789e63e6 SHA512 cbd501685d2abf285f03ac5506234253ec0324d811a4cec4d9a2d7a49eec0ed136d5f0e826ff784794f892f0a8996fb50a8151a5ef0895379ceb2a8ee65d0a0a WHIRLPOOL 1caf28b62367f4d64dd3ad59af993146b37187ba25b3397a25adbbb9af2690fdd77253868d45225c3e1285d9cde0fdbf1f6106533419a6be875facbd1d828c1f
 MISC metadata.xml 196 SHA256 599d489eaeda79157559bc9f7ecdabec345da752748886b14ef461d4fd95bf4b SHA512 d09d812ff37949ddbd49ad24e7c10444c4205e4e8466bba88fb04a973065632160988df92dc5b1f4514b3800581c1afee799ce01533eb0dd09902aa592ffe1cb WHIRLPOOL c67c7b4c7b29362abb1195603ede1ffb02875eb10b33670cf48b94f5a8a84fb76865886f0a487496b8765ed5d340d01ea94095617179bb20bd3fb029262b9355
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2
 
-iEYEAREIAAYFAlR8XgIACgkQVWmRsqeSphMPpwCeP7DTejVrxBKjtN79G1YHbl8A
-R7sAnRYSh9sQo9CdjGCirZ46DmaFih9T
-=S1u+
+iEYEAREIAAYFAlUBa4oACgkQVWmRsqeSphN/uQCfcDaORtG23a+pEsnnuFQh4VnQ
+CX4An2Y+KBcnHmx2GpggYDy757RW7wge
+=VZBG
 -----END PGP SIGNATURE-----
