@@ -1,8 +1,18 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA256
+
 DIST libpostproc-0.8.0.20121125.tar.xz 65376 SHA256 0af39e91375f76cf8980aea2517666e5d69a113e41d5fdc56aa6ad1b33dee1a6 SHA512 7f1451dbe822d143793c12bb7c18fd9eeb98b5347bbfc54172f0aceb2f18cf31b2c0c888c33a9ce2e9f519b4bbb0a900b729188ce83cda9ad5499a8f6ea2d62a WHIRLPOOL 6e879842dfaf78018ca9a3ee93b5e2b950a72e672fc5dc47381f37593a83f886dccb4416fc30e6cdedf0d3fecbf534942f6664de5890d323362cf228106d8311
 DIST libpostproc-10.20140517.tar.xz 65556 SHA256 e47984fd5c60d56cc57d7e58de92eec9e8fd401e333d4a0841ccfbfb107103ca SHA512 0d6dca077c99ac569d892bc92cd08c6bf3e3a5e30e623ced20227b5bd1bd1aa3ecd150bfc900659accd77b997eb64b4d6f0538f9b6161d190ef6c69dcaf47893 WHIRLPOOL ca305b7ae67d61ecca1b359524c81d7219906078feb55087521454a4ceb8dc8235e20fff3a9b9a21e23d55650179639cc3796084942334930d232df3d21f8e14
 EBUILD libpostproc-0.8.0.20121125.ebuild 2472 SHA256 60dcd9f7159d0bfa0cdb8728f67cd0328566699f60893cc8b80918b31fcd8e91 SHA512 59e400bd8d156613233ac63768d05c91e9fc522977d3704b16ade0bab124c417f0cbd80a55d35e26ac02df785d25d4eef3ab65dc278227765131f17bd256edda WHIRLPOOL 730e84ae16c25fcc1b5fe81a74f426180dc7f047b0ee029bb6a882c522c438248e48c6b08ce1a13615c7cce1f57186b1d42272801b0059c0b9a26c754f468756
-EBUILD libpostproc-10.20140517-r1.ebuild 2574 SHA256 4a1659f9f4a1c04737e615ad189c37bd441c37fb3dcc8af3d58fe3507532541e SHA512 77ad8a5c1b30baae1394b6037015ab5691a1047e91c265b6ef82d4c4edc8a2319eb9e18da7766adc299f8c93792d0cce4346393aa88d6c20b45988bfde67f0af WHIRLPOOL e81b79643330df36f7703b3bf94406487aeae9cd67f2e7c2d2a332595fd1c53906a6495d51d6c922d1d15f592fd85c01db41ec43e6d91c0043224c3118cac55f
+EBUILD libpostproc-10.20140517-r1.ebuild 2572 SHA256 1d0b1127736b70d5fc333c9c6b37526b02f97d51654cf694a4c08d6e38076fae SHA512 7bb36cc6500d92b4b49aaaa3003866feb67a0680d726b4060f1a57b8605b924e479dbb07bca5cd990f6938123b63caf2778b408411833702b090a11f38ac3188 WHIRLPOOL e876e00df9104f74a67e839ced56b3d941b6ba2773e253d69a02d7011e87ee098424269bc353f133a111a5e14c66f20d40899664bbb806afd8544a8c965811d5
 EBUILD libpostproc-10.20140517.ebuild 2472 SHA256 db00f2e94b97eef650993b391c57b766fc5b257e4aab7002901915d92a253da7 SHA512 aa95a405406bba014a4395de0e5d4503b1471dfc8374db36577395799ceb7aca6b51c01d1d2853dfea782685ed5b9dc8878b4373ff299dc150c585ecd7ef62ba WHIRLPOOL 11bf307eb4ab9681f5fafcba36d952f3ce8671a6cdd1905ec31105adc86aca8407dbde9a134c566abb05ca6165b5e6ffa7c8fefd31345970531166ea43aed98d
 EBUILD libpostproc-9999.ebuild 2565 SHA256 823cee05428fdca3b68acee937cdc328288a128fd3642c0aa07485073105ecf2 SHA512 78ea183573f188920a869f3da25cc8e36246332241b48ab7723d64fad60737e7dc79a574d99dfb7f36ce59cbfe80ffa17470fd5a75a9b312065e893e46e92cae WHIRLPOOL 1c2cea333c165b7f66f40783a3a9f22fff709f6c93019f6f8227eef0380514a809899575c666f944d31d7b607b4ffac606137e67830dcd28a899c2cf6042e3f7
-MISC ChangeLog 5720 SHA256 a95b94276fe4115e7b065cbdc1bdd09779f8ff0a34df233373aa8a6ba2992f72 SHA512 e2ba96bde2fc4af2a48dbcd62ba398295a1db01c304bdc81530c15974a43a1a4153c419275c7a0d75fe1860191a22487dc73dbaf1915da8deeee700db26379b6 WHIRLPOOL 905a0b7ea7964b99721be28d1485440c9aec57843b557a3c0ebb3d2be057130f0ca3337fa4f2e1d6f87af78e7762cbcedeb7ec232feee3e907369326e4f8720f
+MISC ChangeLog 5837 SHA256 78177a0cdd87542dab9078f6fbec865024f67d657147a968cc045467098531df SHA512 3c2975cc0f508982cda427ea3e69bf0e8663d7871896b3d0d89e3316fd0328e88bc9697e46cf1bb4b351ea31f19ac1dbe4bebadfe95a081152c5916db89c8293 WHIRLPOOL 88c17e61510526a7f63862380364ab5834b24dc832d88a84301c19ddddd1339a62a102203545f8c3f65526e00a0789f73580dd359174bc6cc5ff194bfef6e650
 MISC metadata.xml 322 SHA256 feabb53c61f8e7a15aeb683541e96cfc6defec4ed15601201ce9dd29724c0b00 SHA512 cfa49867a127d8b01ddfeb270fb3aa9ec362035b6b3e3caf769ccbdf0bf1298cd4ed09d7963ce8f2758d7057843b7616f0327f879244536da94d0b0de1f383cc WHIRLPOOL 2c9e73615abe2383609ec01a19bbe292e9a835da7afd0abdc94079edccaba0885e681e38606124627482d7e566a0248c3e6091975b47b8ec506082bdc1f8b5f1
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2
+
+iEYEAREIAAYFAlUBax4ACgkQVWmRsqeSphNZKgCggHXwuUtRqTMo/LUGDGlOatyU
+aAQAnj0ewooLmKOj+cV4DYDBpcXQe3rM
+=dxDG
+-----END PGP SIGNATURE-----
