@@ -4,10 +4,10 @@ DESCRIPTION=Hypertext info and man viewer based on (n)curses
 EAPI=5
 HOMEPAGE=http://pinfo.alioth.debian.org/
 IUSE=nls readline
-KEYWORDS=~alpha ~amd64 ~hppa ~ia64 ~mips ~ppc ~ppc64 ~sparc ~x86 ~x86-fbsd
+KEYWORDS=~alpha ~amd64 hppa ~ia64 ~mips ~ppc ~ppc64 ~sparc ~x86 ~x86-fbsd
 LICENSE=GPL-2
 RDEPEND=sys-libs/ncurses sys-libs/readline nls? ( virtual/libintl )
 SLOT=0
 SRC_URI=https://alioth.debian.org/frs/download.php/3351/pinfo-0.6.10.tar.bz2
 _eclasses_=autotools	8fc2dd333ef9346c906ffd9a523d8211	eutils	998e5931fb95b10a6a11ec796ada2759	flag-o-matic	c263990f1b677b0f0be0a3299f179762	libtool	52d0e17251d04645ffaa61bfdd858944	multilib	3bf24e6abb9b76d9f6c20600f0b716bf	toolchain-funcs	3a1969a45ff85b026c4e0fa3aa2ab443
-_md5_=73d9f2747c57edb031356fe3e6a02c1e
+_md5_=7fc06b89389ae2a4569c2a4ae98fd79a
