@@ -4,10 +4,10 @@ DESCRIPTION=Video post processing library
 EAPI=5
 HOMEPAGE=https://github.com/lu-zero/postproc
 IUSE=pic static-libs cpu_flags_x86_3dnow altivec cpu_flags_x86_mmx cpu_flags_x86_mmxext abi_x86_32 abi_x86_64 abi_x86_x32 abi_mips_n32 abi_mips_n64 abi_mips_o32 abi_ppc_32 abi_ppc_64 abi_s390_32 abi_s390_64
-KEYWORDS=alpha amd64 arm ~arm64 ~hppa ~ia64 ppc ppc64 ~sparc x86 ~amd64-fbsd ~x86-fbsd ~amd64-linux ~x86-linux
+KEYWORDS=alpha amd64 arm ~arm64 hppa ~ia64 ppc ppc64 ~sparc x86 ~amd64-fbsd ~x86-fbsd ~amd64-linux ~x86-linux
 LICENSE=GPL-2
 RDEPEND=>=media-video/libav-0.8.2-r2:0= !media-video/ffmpeg:0 abi_x86_32? ( !<=app-emulation/emul-linux-x86-medialibs-20140508-r3 !app-emulation/emul-linux-x86-medialibs[-abi_x86_32(-)] )
 SLOT=0
 SRC_URI=http://dev.gentoo.org/~lu_zero/distfiles/libpostproc-10.20140517.tar.xz
 _eclasses_=eutils	998e5931fb95b10a6a11ec796ada2759	flag-o-matic	c263990f1b677b0f0be0a3299f179762	multibuild	6d4858dc00f8bc51caf3f957f8430eb0	multilib	3bf24e6abb9b76d9f6c20600f0b716bf	multilib-build	0983c7893df461213a05f791cc7dea6d	multilib-minimal	13dd976916c35a1e2c8d170e840c7018	toolchain-funcs	3a1969a45ff85b026c4e0fa3aa2ab443
-_md5_=3106156948d7ed35fd57c15c09a94055
+_md5_=0375a95748af1f1a9d1099ae29238dc9
