@@ -4,11 +4,11 @@ DESCRIPTION=http protocol ping-like program
 EAPI=5
 HOMEPAGE=http://www.vanheusden.com/httping/
 IUSE=debug fftw linguas_nl ncurses ssl tfo
-KEYWORDS=amd64 ~hppa ~mips ~ppc ~ppc64 ~sparc ~x86
+KEYWORDS=amd64 hppa ~mips ~ppc ~ppc64 ~sparc ~x86
 LICENSE=GPL-2
 RDEPEND=fftw? ( sci-libs/fftw:3.0 ) ncurses? ( >=sys-libs/ncurses-5 ) ssl? ( dev-libs/openssl )
 RESTRICT=test
 SLOT=0
 SRC_URI=http://www.vanheusden.com/httping/httping-2.4.tgz
 _eclasses_=eutils	998e5931fb95b10a6a11ec796ada2759	multilib	3bf24e6abb9b76d9f6c20600f0b716bf	toolchain-funcs	3a1969a45ff85b026c4e0fa3aa2ab443
-_md5_=73185481ece26ecfd3310690ffeffdcc
+_md5_=20db56960feadbce7cae6ca651757224
