@@ -5,23 +5,13 @@ AUX httping-2.2.1-flags.patch 161 SHA256 de8e10b5a001ae56bdaeb9137d45bf963346e6d
 DIST httping-2.3.4.tgz 53928 SHA256 a76171cb066b1d85a7b302f92dd3ee81d44ff1756ca6de5ade195eb07a836bc2 SHA512 680139d907a49b0a7b13904af8437331168e0b3cf838c3443b81b82cb36204d238a7497a7456bb3d39e0ae79fd0b0425f789f6ef72d1a1ec17bdb987e0afa148 WHIRLPOOL 335debd9e6767abc51379e2fd378633db42c919138f69a5571d44acc97f9c5bea5cf852e87aa62387a9ac4876058b048838a78db4be7adfc7c3c4d0309d260b4
 DIST httping-2.4.tgz 54170 SHA256 dab59f02b08bfbbc978c005bb16d2db6fe21e1fc841fde96af3d497ddfc82084 SHA512 11d9e9e3b222548c9754cc0e7bf947f1a55ccc9f1a2401681f95d21b7b7a56c07665955b558a56d07a5c98497ea3644758e4f85006c42fda2134556be8d9e804 WHIRLPOOL eb1318094eb22aa2186421f04c26c4e980a41ba901a3bf80ab50e036417d3cf241bdef26a397b6e6f337cf48fdf3e19627cde82ef6b0ed4c6e3525d1c13a0cf6
 EBUILD httping-2.3.4.ebuild 1229 SHA256 b47317b9a66d73eccfdc1c2e477e2a148bce4f9f1bf8bcf1d0ec31d630e5af6b SHA512 98f39d0bdbaf6bd6bf66cbc9732be44fc0cb6091ab924fd99fe74ee4bca25853f43ab90018102ab9d149b462898335de744eab640c1be9740aab554a5727a4b2 WHIRLPOOL 8ba72b64623c97394bd83bb21b1004ea3658c2cd18d7f8f8b7718db0ca64c051ba82781788b487979c04f05dcfa78486b32825528c70839bb9e3d1c50684b6be
-EBUILD httping-2.4.ebuild 1464 SHA256 9956b264904760198ad835aaf54618ba43572227ab9b85b9feaf9445a5f79a9f SHA512 2f53dfbbb7d2d7d2bf765268a7256c16a3bc109e2d90bddfcb1bda55166ae4476361f090457e70474812a2d634c47ff15adb576c34e073e27d4c5e2102234dfe WHIRLPOOL ea0be048ab5b81507e3a626ab0aa2cd70578567091ea20bd8c0a2d7fb23d9512a36313d38a16d706f820cd8a2d7eeff4dc5ba6f5c485c42cafe3ceb2a17b2330
-MISC ChangeLog 15465 SHA256 0efc0d2ee5b55e9f7f5afafb0aa3f84f50db7b3a2781fecc32469e24959fc120 SHA512 0e3ab0bed7607c4405772dc83b64fc8fa2eaa02bbf82a6318c849e24937eef6ddfa2af6add5d064e2fc0d449b9bc8de07d00cb0f486b4550e4934517621fdba0 WHIRLPOOL a1d8d51546edde9208137e0308cb2ba441a8e42fce184129373bf24c6decee0792c3c3c912ed81a044e2b77079a25463bfd4e1ec8bb29a0cf61ae56f78e63b9b
+EBUILD httping-2.4.ebuild 1463 SHA256 0f91431c11e0f8dfa9381610f210d6989a3618c2e55ee0fc9bc55178fa7f7147 SHA512 f0d6cf49a8da6c5ed8a50331a3b5bf8bdc3265458bfc53410d83affbacf8998d169e2b859d17985551518950221d29a2417880df4ae558b762c9b582f89d6a03 WHIRLPOOL ba2d2cd759b476f8b2def39ca0b51032b56374ce3e960b23a74aef0022fe72fe87eacc1deaa57e64fc532d0ed176832f7c5b4f9b50c37596a9c19eedb4e89bab
+MISC ChangeLog 15566 SHA256 6e338b6c27489e5dcf3d0fa57d8cbb23832b974a4175177164c9397c885e7a72 SHA512 9c50d493c5dde34e1984f0ab9b822a0a2744ad49a7e6c765956e2b5d6cbee8b893e53f0d9c899ff93b174e6b2f9802b56eef914eeb065c4086d0ac6e522cd071 WHIRLPOOL 9fdb2d70b0900d0f01c0c2a6a7a4d3f1d075ac6500c9c98c56e2bdfc354d12609f31edbd6d499ebf94030558f8010f4894d4175d0be489f47e02ac1dfe9fd573
 MISC metadata.xml 229 SHA256 bac702da2eadc933a602245b251cba8621cb903739245ef1de3ba32deac0ca20 SHA512 ba0c05c9884517f166325367e5ede29b29b770f006d4ef804008df0a4f6bb59ff73ee59a6b13a85fd2f3fb070c2c25b7ce896fdda2e978770640becb692442a4 WHIRLPOOL 0e37622329981203106c6379836d2846d4c1e757988d9fba5bfff414cff4df81e3c5bf32b3fe5933ac26c71e503e994d5393b3e6aaae4abde275fd9d19a3cafe
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2
 
-iQIcBAEBCAAGBQJVAWUrAAoJELp701BxlEWfD2wP/2MCzfGdesgkLPhEuTAoaCnZ
-SDmPWUorUDXvLpX4LNy3sPhLBCCsY6R411UwnQ+B45Rt5mIxSXNRNlTW2gw8JbG+
-l5dugXTdMi4ObUmgnsUdtOwvMb/2y9dXqDt4HdROplwbyRoj693YPi1BFa7pBPG1
-1jq5lRW43+v3fLWZ6liXBIsLX4Dsq0yX8JlfFbaHQ7SmsV3G52Sf2TLw5ft/cv3h
-oaoZF5CWhUW4z10vzy3CYYJ3zZlbqUuPfP8tokbkvtyRyD4QiJP/flsEX5ZbR1ZZ
-b71JRhKYmh/H73upIZncP9pewVDZk/5qKnGhpfTioFqJmca1FhvRTFL3zQ4d78mp
-cOuPVmDtaM0sDPe1SMKjPE2LlXvEZLS+n8YKiEISTwN0vGWzT4zMCfiY9PksKmms
-0Ng6/3CBzXdQfx38Zf4ZVXMrCOKU+JgH1JNqEdWqDiLZQVCuodHorqa9LdmiMG2Q
-tF+BpFwXzg5BseRO6Stap8OW35dHoaBagcMpN4iyLiHNTT1nFIpaB1u7zr8MPK7E
-2CsTcfnrU9ZsAs14dqP3nY8WWOl9/PAX55Vwnv2QMrbiU31CEuCvjz5Ykz4B9mh6
-m6nltjrN2babHin8jkUTwccd794CcuB4DFdKDO6P5S9i+35htZppIYvU8jeHnwk9
-LwnlItpOrsADUm7os+i/
-=KMFJ
+iEYEAREIAAYFAlUBbBAACgkQVWmRsqeSphOlbwCfRkUrijZKF/bcL8cCR3Ys7quy
+vBYAn1W5n3tWm7QCSmm9+SWLPPmIWUWi
+=kYzR
 -----END PGP SIGNATURE-----
