@@ -1,6 +1,10 @@
 # ChangeLog for media-libs/libpostproc
 # Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-libs/libpostproc/ChangeLog,v 1.37 2015/03/03 08:49:22 dlan Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-libs/libpostproc/ChangeLog,v 1.38 2015/03/12 10:31:57 jer Exp $
+
+  12 Mar 2015; Jeroen Roovers <jer@gentoo.org>
+  libpostproc-10.20140517-r1.ebuild:
+  Stable for HPPA (bug #541248).
 
   03 Mar 2015; Yixun Lan <dlan@gentoo.org> libpostproc-10.20140517-r1.ebuild:
   add arm64 support, tested on A53 board
