@@ -1,6 +1,9 @@
 # ChangeLog for net-analyzer/httping
 # Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-analyzer/httping/ChangeLog,v 1.125 2015/03/12 10:06:34 ago Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-analyzer/httping/ChangeLog,v 1.126 2015/03/12 10:35:59 jer Exp $
+
+  12 Mar 2015; Jeroen Roovers <jer@gentoo.org> httping-2.4.ebuild:
+  Stable for HPPA (bug #542876).
 
   12 Mar 2015; Agostino Sarubbo <ago@gentoo.org> httping-2.4.ebuild:
   Stable for amd64, wrt bug #542876
