@@ -1,6 +1,9 @@
 # ChangeLog for app-text/pinfo
-# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-text/pinfo/ChangeLog,v 1.79 2014/12/01 12:24:32 jer Exp $
+# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/app-text/pinfo/ChangeLog,v 1.80 2015/03/12 10:33:45 jer Exp $
+
+  12 Mar 2015; Jeroen Roovers <jer@gentoo.org> pinfo-0.6.10-r5.ebuild:
+  Stable for HPPA (bug #534910).
 
 *pinfo-0.6.10-r5 (01 Dec 2014)
 
